test/test_suite/errors/error_decl_ok.c3
module errors;

fault TheError
{
    A
}

fault TheError2
{
    A,
    B
}

fault TheError3
{
    C, D
}


